fix(ui): make chart view scale on smaller devices

--- a/src/app/countries/components/country-stats-pie-chart.component.scss
+++ b/src/app/countries/components/country-stats-pie-chart.component.scss
@@ -2,8 +2,3 @@
   height: 100%;
   width: 100%;
 }
-
-.scale-wrapper {
-  display: flex;
-  flex-direction: column;
-}
